# SPESION

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  SETUP_GUIDE.md  SPESION_3_0.md  SPESION_SETUP.md  STRATEGIC_ANALYSIS.md  architecture.md  debug_notion.py  main.py  pyproject.toml  requirements.txt  setup.py  verify_fix.py  verify_notion_debug.py
data/: google_calendar_credentials.json  user_profile.example.md
docker/: Dockerfile  Dockerfile.api  Dockerfile.sandbox  docker-compose.prod.yml  docker-compose.yml
scripts/: backup.sh  setup.sh  spesion.ps1  spesion.sh  spesion_setup.ps1  spesion_setup.sh  spesion_setup_safe.ps1  start.sh
src/: __init__.py
src/agents/: __init__.py  base_agent.py  coach.py  companion.py  connector.py  executive.py  scholar.py  sentinel.py  techlead.py  tycoon.py
src/api/: __init__.py  auth.py  rate_limiter.py  server.py
src/api/routes/: chat.py  health.py  tools.py
src/autonomous/: __init__.py  approval.py  planner.py  task_queue.py
src/cognitive/: __init__.py  reflection.py
src/core/: __init__.py  compaction.py  config.py  graph.py  model_router.py  prompts.py  state.py  supervisor.py  workspace_loader.py
src/features/: smart_wake.py
src/heartbeat/: __init__.py  runner.py
src/interfaces/: __init__.py  discord_bot.py  telegram_bot.py
src/memory/: __init__.py  evolving_memory.py  skill_store.py
src/persistence/: __init__.py  session_store.py
src/security/: __init__.py  guard.py
src/services/: __init__.py  llm_factory.py  memory.py  notion_manager.py  notion_setup.py  rag_service.py  vector_store.py  whisper_service.py
src/tools/: __init__.py  arxiv_tool.py  autonomous_tools.py  browser_tool.py  calendar_mcp.py  code_sandbox.py  document_tools.py  email_tool.py  finance_tool.py  finance_tools.py  garmin_mcp.py  github_mcp.py  image_tools.py  investments_sync.py  memory_tools.py  notion_mcp.py  phone_tool.py  portfolio_reconcile.py  search_tool.py  strava_mcp.py  tool_factory.py
tools/manifests/: check_crypto_price.yaml  check_weather.yaml
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md
